<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:background="#fff"
    android:padding="8dp"
    android:id="@+id/container">

    <RelativeLayout
        android:layout_width="376dp"
        android:layout_height="137dp"
        >

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="119dp"
            android:layout_height="117dp"
            android:background="@drawable/libro"
            />

        <LinearLayout
            android:layout_width="245dp"
            android:layout_height="128dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="128dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:text="@string/category"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                android:drawableStart="@drawable/ic_monetization_on_black_24dp"
                android:gravity="center"
                android:text="@string/amount"
                android:textColor="#fff"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/bookAuthor"
                android:textSize="12sp" />
        </LinearLayout>


    </RelativeLayout>



</LinearLayout>